--- a/pom.xml
+++ b/pom.xml
@@ -59,5 +59,6 @@
     	<version>0.1.0</version>
     	<scope>system</scope>
     	<systemPath>${project.basedir}/lib/fanciful-0.1.0.jar</systemPath>
+	</dependency>
   </dependencies>
 </project>
